# psy

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/psy/: Cargo.toml
crates/psy-client/: Cargo.toml
crates/psy-client/src/: lib.rs
crates/psy-core/: Cargo.toml
crates/psy-core/examples/: embedded_fixture.rs
crates/psy-core/src/: api.rs  lib.rs  macos_cleanup.rs  probe.rs  process.rs  protocol.rs  psyfile.rs  ring_buffer.rs  root.rs
crates/psy-core/src/platform/: unix.rs  windows.rs
crates/psy-core/tests/: embedded.rs
crates/psy-macos-cleanup-sidecar/: Cargo.toml
crates/psy-macos-cleanup-sidecar/src/: main.rs
crates/psy-mcp/: Cargo.toml
crates/psy-mcp/src/: lib.rs
crates/psy/src/: main.rs
crates/psy/tests/: integration.rs
src/: client.rs  macos_cleanup.rs  main.rs  mcp.rs  process.rs  protocol.rs  psyfile.rs  ring_buffer.rs  root.rs
src/platform/: unix.rs  windows.rs
tests/: integration.rs
