[package]
name = "psy"
version = "1.8.0"
edition = "2021"
description = "Cross-platform process lifecycle manager"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
regex = "1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal", "user"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_System_Console",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security",
    "Win32_Foundation",
] }

[dev-dependencies]
libc = "0.2"
serial_test = "3"

[profile.release]
strip = true
lto = true
opt-level = "z"
