[workspace]
resolver = "2"
members = [
    "crates/psy",
    "crates/psy-core",
    "crates/psy-client",
    "crates/psy-mcp",
    "crates/psy-macos-cleanup-sidecar",
]

[workspace.package]
version = "2.2.0"
edition = "2021"
description = "Cross-platform process lifecycle manager"
license = "MIT"
repository = "https://github.com/lauripiispanen/psy"
authors = ["Lauri Piispanen <lauri@piispanen.fi>"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
regex = "1"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[profile.release]
strip = true
lto = true
opt-level = "z"
