[package]
name = "psy-client"
version.workspace = true
edition.workspace = true
description = "NDJSON wire-protocol client for talking to a running psy supervisor"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
psy-core = { path = "../psy-core", version = "2.1.0" }
serde_json = { workspace = true }
