[package]
name = "psy-macos-cleanup-sidecar"
version.workspace = true
edition.workspace = true
description = "Standalone macOS cleanup sidecar for psy embedded hosts"
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "psy-macos-cleanup-sidecar"
path = "src/main.rs"

[dependencies]
psy-core = { path = "../psy-core", version = "2.1.0" }
