[package]
name = "psy"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "psy"
path = "src/main.rs"

[dependencies]
psy-core = { path = "../psy-core", version = "2.0.0" }
psy-client = { path = "../psy-client", version = "2.0.0" }
psy-mcp = { path = "../psy-mcp", version = "2.0.0" }
tokio = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
libc = { workspace = true }
serial_test = "3"
